# Yu-LaTeX-Academic-Automata

./: README.md  README.zh-CN.md  pyproject.toml
_assets/documents/: compilation_automation.md  data_table_conversion.md  overleaf_tools.md  source_management.md
assets/documents/: content_generation.md
data_table_conversion/: df_converter.py
docs/generations/: content_generation.md  data_table_conversion.md  reference_processing.md
docs/management/: compilation_automation.md  source_management.md
generators/: __init__.py
generators/content_generation/: __init__.py
generators/data_table_conversion/: __init__.py  df_converter.py
generators/table_conversion/: df_converter.py  pandas_df_converter.py
integrations/: __init__.py
integrations/overleaf_tools/: __init__.py
managers/: __init__.py
managers/postprocessors/: __init__.py  latex_project_cleaner.py  latex_project_cleaner.sh
managers/preprocessors/: __init__.py
modules/generators/table_conversion/: pandas_df_converter.py
modules/managers/postprocessors/: latex_project_cleaner.py
modules/managers/preprocessors/: latex_project_structure_maker.py
modules/managers/workflows/: __init__.py
src/generations/content/: bib_converter.py
src/generators/format_conversion/: __init__.py
src/generators/table_conversion/: __init__.py  pandas_df_converter.py
src/integrations/git/: __init__.py
src/integrations/references/: __init__.py  (+1 more)
src/management/: __init__.py
tests/: __init__.py
tests/data/: bib_file_demo.bib
tests/integration_tests/: __init__.py
tests/unit_tests/: __init__.py
(+8 files in other folders)
