[project]
name = "yu-latex-academic-automata"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ==== Base ====
    ## log
    "loguru",
    ## path
    "pathlib",
    # ==== Main ====
    ## Managers
    "arxiv-latex-cleaner",
    ## Gengerators
    "pylatex",
    "pandas",
    ## Integrations
]


[dependency-groups]
# Development
dev = [
    # ==== Linting and Formatting ====
    "ruff",
#    "mypy",
#    "pyright",
    # ==== Debugging and Dev Productivity ====
#    "ipython",
#    "pre-commit",
]
# Tests
test = [
    # pytest
    "pytest",
    "pytest-asyncio",  # if only asyncio instead of anyio
]
# Documents
docs = [
    # Sphinx
#    "sphinx",
#    "sphinx-rtd-theme",
#    "myst-parser",
    # MkDocs
#    "mkdocs",
#    "mkdocs-material",
#    "mkdocstrings",
]


[tool.uv]
default-groups = ["dev", "test", ]


[tool.ruff]
select = ["E", "F", ]
ignore = [
    "F401",
]
format.quote-style = "preserve"


[tool.pytest.ini_options]
asyncio_mode = "auto"

